welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: identifier expected but 'new' found.
  var T :new Array[Int](num) 
         ^